<resources>
    <string name="app_name">介護ノート</string>
    <string name="haisetu_click">排泄</string>
    <string name="syokujinsui_click">食事・飲水</string>
    <string name="kouku_click">口腔</string>
    <string name="nyuyoku_click">入浴</string>
    <string name="kiroku_click">記録</string>
    <string name="acsidento_click">アクシデント</string>
    <string name="syoti_click">処置</string>
    <string name="haiyaku_click">配薬</string>
    <string name="kirokuitirann_click">記録一覧</string>
    <string name="hainyou_click">排尿</string>
    <string name="haibenn_click">排便</string>
    <string name="tyousyoku_click">朝食</string>
    <string name="tyusyoku_click">昼食</string>
    <string name="yuusyoku_click">夕食</string>
    <string name="kansyoku_click">間食</string>
    <string name="asakouku_click">朝食 口腔</string>
    <string name="hirukouku_click">昼食 口腔</string>
    <string name="yorukouku_click">夕食 口腔</string>
    <string name="nitizyoukiroku_click">日常記録</string>
    <string name="nyuyokukiroku_click">入浴記録</string>
    <string name="mosiokuri_click">申し送り</string>
    <string name="hiyari_click">ヒヤリハット</string>
    <string name="ziko_click">事故報告</string>
    <string name="tyosyokugoyaku_click">朝食後薬</string>
    <string name="tyusyokugoyaku_click">昼食後薬</string>
    <string name="yusyokugoyaku_click">夕食後薬</string>
    <string name="kisyouziyaku_click">起床時薬</string>
    <string name="syusinngoyaku_click">就寝薬</string>
    <string name="tonpuku_click">頓服</string>
    <string name="syokuzennyakuasa_click">朝食前薬</string>
    <string name="syokuzennyakuhiru_click">昼食前薬</string>
    <string name="syokuzennyakuyoru_click">夜食前薬</string>
    <string name="menu_1">排尿メニュー</string>
    <string-array name="kaigo">　　
        <item>排尿なし  </item>
        <item>排尿あり　少量</item>
        <item>排尿あり　普通量</item>
        <item>排尿あり　多量</item>
    </string-array>

    <string-array name="haiben">
        <item>排便なし</item>
        <item>排便あり　少量</item>
        <item>排便あり　普通量</item>
        <item>排便あり　多量</item>
    </string-array>

    <string-array name="syusyoku">
        <item>　主食　全量召し上がる</item>
        <item>　主食　半分召し上がる</item>
        <item>　主食　半分以下召し上がる</item>
        <item>　主食　食べなかった</item>
    </string-array>

    <string-array name="fukusyoku">

        <item>　副食　全量召し上がる</item>
        <item>　副食　半分召し上がる</item>
        <item>　副食　半分以下召し上がる</item>
        <item>　副食　食べなかった</item>
    </string-array>

    <string-array name="kansyoku">
        <item>間食　全量召し上がる</item>
        <item>間食　半分召し上がる</item>
        <item>間食　食べなかった</item>
    </string-array>

    <string-array name="koukukea">
        <item>自分で歯磨き行いました</item>
        <item>口腔ケア行いました</item>
        <item>口腔ケアできなかった</item>
    </string-array>

    <string-array name="fukuyaku">
        <item>薬　飲まれました</item>
        <item>中止する</item>

    </string-array>

    <string name="insui">飲水量</string>

    <string name="tv_name1">保存</string>
    <string name="tv_name2">名前</string>
    <string name="tv_name3">備考</string>
    <string name="tv_name">未選択</string>

    <string name="no_senntaku">未選択</string>


    <string name="bt_back">前の100件</string>
    <string name="bt_next">次の100件</string>
    <string name="bt_back2">前の100件</string>
    <string name="bt_next2">次の100件</string>

    <string name="bt_debug">デバッグ</string>
    <string name="bt_clear">DBを削除</string>
    <string name="bt_clear_hainyou">DBを削除</string>
    <string name="bt_add_hainyou">排尿を100件追加</string>
    <string name="bt_add_haibenn">排便を100件追加</string>
    <string name="bt_add_syokuji">食事を100件追加</string>
    <string name="bt_add_fukuyaku">服薬を100件追加</string>


    <string name="page_haisetu">排泄記録</string>
    <string name="page_syokuji">食事記録</string>
    <string name="page_kouku">口腔記録</string>
    <string name="page_haiyaku">配薬記録</string>
    <string name="page_nyuyokukiroku">入浴記録</string>
    <string name="page_nitizyoukiroku">日常記録</string>
    <string name="page_mousiokuri">申し送り</string>
    <string name="page_hiyarihat">ヒヤリハット</string>
    <string name="page_zikohoukoku">事故報告</string>
    <string name="page_syoti">処置記録</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //ボタン名
    <string name="haisetu_kiroku">排泄記録</string>
    <string name="syokuji_kiroku">食事記録</string>
    <string name="haiyaku_kiroku">服薬記録</string>
    <string name="nyuyoku_kiroku">入浴記録</string>
    <string name="kouku_kiroku">口腔記録</string>
    <string name="nitizyou_kiroku">日常記録</string>
    <string name="zikohoukoku_kiroku">事故報告</string>

</resources>
