<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HaiyakuActivity">

    <Button
        android:id="@+id/tyosyokugoyaku_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="148dp"
        android:text="@string/tyosyokugoyaku_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tyusyokugoyaku_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="148dp"
        android:text="@string/tyusyokugoyaku_click"
        app:layout_constraintEnd_toStartOf="@+id/yusyokugoyaku_click"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/tyosyokugoyaku_click"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yusyokugoyaku_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/yusyokugoyaku_click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kisyouziyaku_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/kisyouziyaku_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tyosyokugoyaku_click" />

    <Button
        android:id="@+id/syusinngoyaku_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:text="@string/syusinngoyaku_click"
        app:layout_constraintEnd_toStartOf="@+id/tonpuku_click"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/kisyouziyaku_click"
        app:layout_constraintTop_toBottomOf="@+id/tyusyokugoyaku_click" />

    <Button
        android:id="@+id/tonpuku_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/tonpuku_click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yusyokugoyaku_click" />

    <Button
        android:id="@+id/syokuzennyakuasa_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/syokuzennyakuasa_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kisyouziyaku_click" />

    <Button
        android:id="@+id/syokuzennyakuhiru_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:text="@string/syokuzennyakuhiru_click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/syokuzennyakuasa_click"
        app:layout_constraintTop_toBottomOf="@+id/syusinngoyaku_click" />

    <Button
        android:id="@+id/syokuzennyakuyoru_click"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/syokuzennyakuyoru_click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tonpuku_click" />

</androidx.constraintlayout.widget.ConstraintLayout>